[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/icons/icon_128_node_element.svg" type="Texture" id=1]
[ext_resource path="res://assets/icons/icon_128_circle_big.svg" type="Texture" id=2]
[ext_resource path="res://components/neighbourhood/elements/neighbourhood_view_node_element.gd" type="Script" id=3]

[sub_resource type="StyleBoxFlat" id=12]
content_margin_left = 0.0
content_margin_right = 0.0
content_margin_top = 0.0
content_margin_bottom = 0.0
bg_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="DynamicFontData" id=14]
override_oversampling = 1.0
font_path = "res://assets/theme/Barlow-Bold.ttf"

[sub_resource type="DynamicFont" id=9]
size = 20
use_mipmaps = true
use_filter = true
extra_spacing_top = -2
extra_spacing_bottom = -2
font_data = SubResource( 14 )

[sub_resource type="StyleBoxEmpty" id=13]
content_margin_left = 8.0
content_margin_right = 8.0
content_margin_top = 4.0
content_margin_bottom = 4.0

[sub_resource type="StyleBoxFlat" id=11]
content_margin_left = 8.0
content_margin_right = 8.0
content_margin_top = 4.0
content_margin_bottom = 4.0
bg_color = Color( 0, 0.0458431, 0.112305, 1 )
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxEmpty" id=4]

[node name="GraphNode" type="Node2D"]
position = Vector2( 37, 39 )
script = ExtResource( 3 )

[node name="KindLabelBG" type="PanelContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 46.0
margin_top = -33.0
margin_right = 103.0
margin_bottom = -3.0
rect_min_size = Vector2( 52, 30 )
rect_pivot_offset = Vector2( 26, 15 )
mouse_filter = 2
custom_styles/panel = SubResource( 12 )

[node name="KindLabelText" type="Label" parent="KindLabelBG"]
modulate = Color( 0, 0, 0, 1 )
margin_right = 57.0
margin_bottom = 30.0
rect_min_size = Vector2( 52, 30 )
rect_pivot_offset = Vector2( 26, 15 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 9 )
custom_styles/normal = SubResource( 13 )
text = "Kind"
valign = 1

[node name="IconBG" type="Sprite" parent="."]
self_modulate = Color( 0.0392157, 0.509804, 0.423529, 1 )
position = Vector2( 0, -1.6 )
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 2 )

[node name="IconShadow" type="TextureRect" parent="IconBG"]
modulate = Color( 0, 0, 0, 0.313726 )
margin_left = -48.0
margin_top = -42.3333
margin_right = 48.0
margin_bottom = 53.6667
rect_min_size = Vector2( 96, 96 )
mouse_filter = 2
texture = ExtResource( 1 )
expand = true
stretch_mode = 6

[node name="Icon" type="TextureRect" parent="IconBG"]
modulate = Color( 0.866667, 1, 0.976471, 1 )
margin_left = -48.0
margin_top = -48.0
margin_right = 48.0
margin_bottom = 48.0
rect_min_size = Vector2( 96, 96 )
mouse_filter = 2
texture = ExtResource( 1 )
expand = true
stretch_mode = 6

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 46.0
margin_top = 3.0
margin_right = 114.0
margin_bottom = 33.0
rect_min_size = Vector2( 52, 30 )
rect_pivot_offset = Vector2( 26, 15 )
custom_colors/font_color = Color( 0.537255, 0.819608, 0.945098, 1 )
custom_fonts/font = SubResource( 9 )
custom_styles/normal = SubResource( 11 )
text = "Name"
valign = 1

[node name="Button" type="ToolButton" parent="."]
margin_left = -37.0
margin_top = -40.0
margin_right = 116.0
margin_bottom = 38.0
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 4 )

[connection signal="mouse_entered" from="Button" to="." method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_Button_mouse_exited"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
